[project]
name = "network-asset-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyter-dash>=0.4.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "rapidfuzz>=3.14.3",
    "seaborn>=0.13.2",
]
